# identity_platform

./: .dockerignore  .env.sample  Dockerfile  backup.dump  docker-compose.yml  dokcer-entrypoint.sh  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 592bd434fd19_initial.py  bf968ceaf117_initial_migration.py
app/: main.py  models.py
app/core/: config.py  db.py
app/routes/: schemas.py  todo.py
nginx/: Dockerfile  nginx.conf
